--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,13 @@ go:
 env:
   - GO111MODULE=on
 
+before_script:
+  - go get -v golang.org/x/lint/golint
+  - go get -u github.com/client9/misspell/cmd/misspell
+  - go get -u github.com/golangci/golangci-lint/cmd/golangci-lint
+
 script:
+  - golint ./...
+  - misspell ./...
+  - golangci-lint run --no-config --disable=ineffassign,errcheck,govet
   - go test -v -race -timeout 30m ./test
